--- a/assets/pages.css
+++ b/assets/pages.css
@@ -17,7 +17,7 @@ body .the-container {
 }
 body .the-container .header {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   width: 100%;
   height: 70px;
   box-shadow: 0px 5px 2px 0px rgba(0, 0, 0, 0.1490196078);
@@ -31,12 +31,12 @@ body .the-container .header .go-back {
   margin-top: 10px;
   text-decoration: none;
 }
-body .the-container .header .logo-mobile {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
+body .the-container .header .box-logo {
   margin: auto;
+  margin-top: 30px;
+  width: 60%;
+}
+body .the-container .header .box-logo .logo-mobile {
   width: 180px;
 }
 body .the-container main {
@@ -185,15 +185,18 @@ body .the-container main .first-card .choose-it {
   margin-top: 40px;
 }
 body .the-container main .first-card .choose-it .choose {
-  border: 2px Solid;
-  border-radius: 20px;
+  border-radius: 30px;
+  background-image: linear-gradient(to top left, #9356DC, #FF79DA 100%);
+  -webkit-box-shadow: 0px 10px 20px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 10px 20px 8px rgba(0, 0, 0, 0.2);
+  padding: 20px;
   border: none;
+  color: white;
+  font-size: 16px;
+  transition: 300ms;
+  cursor: pointer;
+  transition-timing-function: ease-out;
   width: 200px;
-  height: 50px;
-  color: #FFFFFF;
-  background-image: linear-gradient(to top left, #9356DC, #FF79DA);
-  box-shadow: 0px 4px 10px 0 rgba(0, 0, 0, 0.2509803922);
-  transition: all 0.5s;
 }
 body .the-container main .first-card .choose-it .choose:hover {
   transform: scale(1.1);
@@ -265,9 +268,6 @@ body .the-container .end .link .foot-icone {
     justify-content: center;
     align-items: center;
   }
-  body .the-container main .first-card .entries .one .for-title {
-    width: 200px;
-  }
   body .the-container main .first-card .entries .one .for-title .menu-title {
     width: 100%;
   }
@@ -321,7 +321,7 @@ body .the-container .end .link .foot-icone {
     font-size: 14px;
   }
 }
-@media screen and (min-width: 1025px) {
+@media screen and (min-width: 1025px) and (max-width: 1440px) {
   body .the-container {
     width: 100%;
   }
@@ -360,9 +360,6 @@ body .the-container .end .link .foot-icone {
     justify-content: center;
     align-items: center;
     padding-top: 40px;
-  }
-  body .the-container main .first-card .entries .one .for-title {
-    width: 200px;
   }
   body .the-container main .first-card .entries .one .for-title .menu-title {
     width: 100%;
