--- a/sass/pages.scss
+++ b/sass/pages.scss
@@ -21,7 +21,7 @@ body{
     width: 375px;
     .header {
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         width: 100%;
         height: 70px;
         box-shadow: 0px 5px 2px 0px #00000026;
@@ -34,10 +34,13 @@ body{
         margin-top: 10px;
         text-decoration: none;
       }
-      .logo-mobile{
-        @include centering;
-        margin: auto;
-        width: 180px;
+      .box-logo{
+       margin: auto;
+       margin-top: 30px;
+        width: 60%;
+        .logo-mobile{
+          width: 180px;
+        }
       }
     }
     main {
@@ -174,15 +177,11 @@ body{
             @include centering;
             margin-top: 40px;
             .choose{
-              border: 2px Solid;
-              border-radius: 20px;
-              border: none;
+              @include big-round;
+              transition: 300ms;
+              cursor: pointer;
+              transition-timing-function: ease-out;
               width: 200px;
-              height: 50px;
-              color: $white;
-              background-image: linear-gradient( to top left,$primary , $secondary);
-              box-shadow: 0px 4px 10px 0 #00000040;
-              transition: all 0.5s;
             }
             .choose:hover{
               transform: scale(1.1);
@@ -259,7 +258,6 @@ body{
               justify-content: center;
               align-items: center;
               .for-title {
-                width: 200px;
                 .menu-title {
                   width: 100%;
                 }
@@ -360,7 +358,6 @@ body{
               align-items: center;
               padding-top: 40px;
               .for-title {
-                width: 200px;
                 .menu-title {
                   width: 100%;
                 }
