--- a/assets/pages.css
+++ b/assets/pages.css
@@ -80,16 +80,13 @@ body .the-container main .first-card .one .heart-color {
   margin-left: 10px;
 }
 body .the-container main .first-card .one .heart-color:hover {
-  font-weight: 600;
   background-image: linear-gradient(#9356DC, #FF79DA);
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
+  font-weight: 600;
   cursor: pointer;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
+  transition: 1s;
 }
 body .the-container main .first-card .box-card-title {
   margin-bottom: 15px;
@@ -268,6 +265,9 @@ body .the-container .end .link .foot-icone {
     justify-content: center;
     align-items: center;
   }
+  body .the-container main .first-card .entries .one .for-title {
+    padding: 0px;
+  }
   body .the-container main .first-card .entries .one .for-title .menu-title {
     width: 100%;
   }
@@ -299,26 +299,23 @@ body .the-container .end .link .foot-icone {
     padding: 40px 0px 20px 0px;
   }
   body .the-container .end .foot-title {
-    margin-right: 40px;
-    margin-left: 10px;
+    margin-right: 70px;
     margin-top: 0px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
   }
   body .the-container .end .link-footer {
     display: flex;
-    margin-right: 10px;
-    margin-bottom: 10px;
     order: 1;
+    margin-right: 20px;
   }
   body .the-container .end .link-footer-2 {
     display: flex;
-    margin-left: 10px;
-    margin-right: 20px;
-    margin-bottom: 10px;
+    margin-left: 25px;
+    margin-right: 50px;
   }
   body .the-container .end .link {
-    font-weight: 300;
-    font-size: 14px;
+    font-weight: 200;
+    font-size: 13px;
   }
 }
 @media screen and (min-width: 1025px) and (max-width: 1440px) {
@@ -361,6 +358,9 @@ body .the-container .end .link .foot-icone {
     align-items: center;
     padding-top: 40px;
   }
+  body .the-container main .first-card .entries .one .for-title {
+    width: 250px;
+  }
   body .the-container main .first-card .entries .one .for-title .menu-title {
     width: 100%;
   }
@@ -393,22 +393,24 @@ body .the-container .end .link .foot-icone {
     padding: 40px 0px 20px 0px;
   }
   body .the-container .end .foot-title {
-    margin-right: 40px;
+    margin-right: 80px;
     margin-top: 0px;
     margin-bottom: 0px;
   }
   body .the-container .end .link-footer {
     display: flex;
     order: 1;
+    margin-right: 20px;
   }
   body .the-container .end .link-footer-2 {
     display: flex;
     margin-left: 25px;
-    margin-right: 20px;
+    margin-right: 80px;
   }
   body .the-container .end .link {
     font-weight: 200;
     font-size: 15px;
+    margin-right: 10px;
   }
 }
 
