--- a/sass/pages.scss
+++ b/sass/pages.scss
@@ -265,6 +265,9 @@ body{
               }
             }
           }
+          .dishes{
+            margin-bottom: 40px;
+          }
           .box-card-title {
             width: 70%;
             margin: auto;
@@ -362,6 +365,9 @@ body{
                 }
               }
             }
+          }
+          .dishes {
+            margin-bottom: 40px;
           }
           .box-card-title {
             width: 60%;
