--- a/assets/pages.css
+++ b/assets/pages.css
@@ -182,7 +182,7 @@ body .the-container main .first-card .choose-it {
   margin-top: 40px;
 }
 body .the-container main .first-card .choose-it .choose {
-  border-radius: 30px;
+  border-radius: 25px;
   background-image: linear-gradient(to top left, #9356DC, #FF79DA 100%);
   -webkit-box-shadow: 0px 10px 20px 8px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 10px 20px 8px rgba(0, 0, 0, 0.2);
@@ -270,6 +270,9 @@ body .the-container .end .link .foot-icone {
   }
   body .the-container main .first-card .entries .one .for-title .menu-title {
     width: 100%;
+  }
+  body .the-container main .first-card .dishes {
+    margin-bottom: 40px;
   }
   body .the-container main .first-card .box-card-title {
     width: 70%;
@@ -363,6 +366,9 @@ body .the-container .end .link .foot-icone {
   }
   body .the-container main .first-card .entries .one .for-title .menu-title {
     width: 100%;
+  }
+  body .the-container main .first-card .dishes {
+    margin-bottom: 40px;
   }
   body .the-container main .first-card .box-card-title {
     width: 60%;
