--- a/sass/main.scss
+++ b/sass/main.scss
@@ -285,17 +285,32 @@ body {
     display: flex;
     justify-content: center;
     .main-container{
+      width: 100%;
       .header {
         box-shadow: none;
-        height: 60px;
+        height: 80px;
+        margin-bottom: 0px;
       }
       .form-search{
         box-shadow: none;
         margin-bottom: 0px;
         padding: 10px 0px;
       }
-      width:100%;
-     .first-one .btn-big.btn-round{
+      .first-one {
+        .head-line{
+          font-size: 35px;
+          margin-bottom: 15px;
+        }
+        .sub-line{
+          font-size: 16px;
+          margin-bottom: 30px;
+        }
+       .btn-big{
+        width: 300px;
+        font-size: 20px;
+        border-radius: 30px;
+       }
+      }.first-one .btn-big.btn-round{
         width: 20%;
       }
       .functions {
