--- a/sass/helper/_mixins.scss
+++ b/sass/helper/_mixins.scss
@@ -73,3 +73,128 @@
     position: absolute;
     border-radius: 2px;
 }
+
+@mixin animation-entries{
+  animation-duration:2s;
+  animation-delay: 4s;
+  animation-name:first-meal;
+  visibility: hidden;
+  animation-fill-mode:forwards;
+ 
+  .box-card-title{
+    animation-name:first-meal;
+    animation-duration: 1s;
+    animation-delay: 1s;
+    animation-fill-mode: forwards;
+  }
+  .cards:nth-of-type(1){
+    animation-name:first-meal;
+    animation-timing-function:ease-in-out;
+    animation-delay: 1.7s;
+    animation-fill-mode: forwards;
+  }
+  .cards:nth-of-type(2){
+    animation-name:first-meal;
+    animation-delay: 2.5s;
+    animation-fill-mode: forwards;
+    animation-timing-function:ease-in-out;
+  }
+  .cards:nth-of-type(3){
+    animation-name: first-meal;
+    animation-delay:3.5s;
+    animation-fill-mode: forwards;
+    animation-timing-function:ease-in-out;
+  }
+  @keyframes first-meal {
+    to{
+      visibility:visible;
+      animation-duration: 4s;
+    }
+  }
+}
+
+
+
+
+
+
+ @mixin animation-dishes {
+    animation-duration:8s;
+    animation-delay: 8s;
+    animation-name: firstofdishes;
+   opacity: 0;
+    animation-fill-mode: forwards;
+    .box-card-title{
+      animation-name: firstofdishes;
+      animation-duration: 1s;
+      animation-delay: 4.5s;
+      animation-fill-mode: forwards;
+    }
+    .cards:nth-of-type(1) {
+      animation-name: firstofdishes;
+      animation-timing-function:ease-in-out;
+      animation-delay: 5.5s;
+      animation-fill-mode: forwards;
+     
+      animation-duration: 2s;
+    }
+    .cards:nth-of-type(2){
+      animation-name: firstofdishes;
+      animation-delay: 6.5s;
+      animation-fill-mode: forwards;
+      animation-timing-function:ease-in-out;
+     }
+     .cards:nth-of-type(3){
+      animation-name: firstofdishes;
+      animation-delay:7.5s;
+      animation-fill-mode: forwards;
+      animation-timing-function:ease-in-out;
+     }
+      @keyframes firstofdishes {
+       to{
+       opacity: 1;
+        animation-duration: 9s;
+        }
+      }
+  }
+
+  @mixin animation-desserts{
+    animation-duration:11s;
+    animation-delay: 12s;
+    animation-name: show-desserts;
+    visibility: hidden;
+    animation-fill-mode: forwards;
+ 
+    .box-card-title{
+      animation-name: show-desserts;
+      animation-duration: 1s;
+      animation-delay: 8.3s;
+      animation-fill-mode: forwards;
+    }
+    .cards:nth-of-type(1){
+      animation: show-desserts;
+      animation-delay: 9s;
+      animation-fill-mode: forwards;
+      animation-timing-function:ease-in-out;
+   
+    }
+    .cards:nth-of-type(2){
+      animation: show-desserts;
+      animation-delay: 10s;
+      animation-fill-mode: forwards;
+      animation-timing-function:ease-in-out;
+    }
+    .cards:nth-of-type(3){
+      animation: show-desserts;
+      animation-delay: 11s;
+      animation-fill-mode: forwards;
+      animation-timing-function:ease-in-out;
+    }
+    @keyframes show-desserts {
+      to{
+        visibility: visible;
+        animation-duration: 12s;
+        transition:ease-out;
+      }
+    }
+  }
