--- a/sass/pages.scss
+++ b/sass/pages.scss
@@ -103,6 +103,8 @@ body{
               padding-bottom: 4px;
             }
           }
+        
+          }
           .cards {
             display: flex;
             justify-content: space-between;
@@ -112,6 +114,7 @@ body{
             border-radius: 15px;
             box-shadow: 0px 4px  15px #0000001A;
             height: 70px;
+       
             cursor: pointer;
             .menu{
             padding: 10px;
@@ -190,7 +193,18 @@ body{
               box-shadow: 0px 4px 15px 0px #00000059;
             }
           }
-      }
+          .entries {
+            .one{
+              visibility: visible;
+            }
+           @include animation-entries;
+          }
+          .dishes{
+           @include animation-dishes;
+          }
+          .desserts  {
+           @include animation-desserts
+          }
     }
     .end {
       background-color: $footer;
