--- a/assets/pages.css
+++ b/assets/pages.css
@@ -200,120 +200,43 @@ body .the-container main .choose-it .choose:hover {
   opacity: 0.9;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.3490196078);
 }
-body .the-container main .entries {
-  animation-duration: 2s;
-  animation-delay: 4s;
-  animation-name: first-meal;
-  visibility: hidden;
-  animation-fill-mode: forwards;
-}
-body .the-container main .entries .one {
-  visibility: visible;
-}
-body .the-container main .entries .box-card-title {
-  animation-name: first-meal;
-  animation-duration: 1s;
+body .the-container main .entries .box-card-title, body .the-container main .entries .cards {
+  animation-duration: 3s;
   animation-delay: 1s;
-  animation-fill-mode: forwards;
-}
-body .the-container main .entries .cards:nth-of-type(1) {
   animation-name: first-meal;
-  animation-timing-function: ease-in-out;
-  animation-delay: 1.7s;
+  opacity: 0;
   animation-fill-mode: forwards;
-}
-body .the-container main .entries .cards:nth-of-type(2) {
-  animation-name: first-meal;
-  animation-delay: 2.5s;
-  animation-fill-mode: forwards;
-  animation-timing-function: ease-in-out;
-}
-body .the-container main .entries .cards:nth-of-type(3) {
-  animation-name: first-meal;
-  animation-delay: 3.5s;
-  animation-fill-mode: forwards;
-  animation-timing-function: ease-in-out;
+  transition-timing-function: ease-in-out;
 }
 @keyframes first-meal {
   to {
-    visibility: visible;
-    animation-duration: 4s;
+    opacity: 1;
   }
 }
 body .the-container main .dishes {
-  animation-duration: 8s;
-  animation-delay: 8s;
+  animation-duration: 3s;
+  animation-delay: 2s;
   animation-name: firstofdishes;
   opacity: 0;
-  animation-fill-mode: forwards;
-}
-body .the-container main .dishes .box-card-title {
-  animation-name: firstofdishes;
-  animation-duration: 1s;
-  animation-delay: 4.5s;
-  animation-fill-mode: forwards;
-}
-body .the-container main .dishes .cards:nth-of-type(1) {
-  animation-name: firstofdishes;
-  animation-timing-function: ease-in-out;
-  animation-delay: 5.5s;
-  animation-fill-mode: forwards;
-  animation-duration: 2s;
-}
-body .the-container main .dishes .cards:nth-of-type(2) {
-  animation-name: firstofdishes;
-  animation-delay: 6.5s;
-  animation-fill-mode: forwards;
-  animation-timing-function: ease-in-out;
-}
-body .the-container main .dishes .cards:nth-of-type(3) {
-  animation-name: firstofdishes;
-  animation-delay: 7.5s;
   animation-fill-mode: forwards;
   animation-timing-function: ease-in-out;
 }
 @keyframes firstofdishes {
   to {
     opacity: 1;
-    animation-duration: 9s;
   }
 }
 body .the-container main .desserts {
-  animation-duration: 11s;
-  animation-delay: 12s;
+  animation-duration: 3s;
+  animation-delay: 3s;
   animation-name: show-desserts;
-  visibility: hidden;
-  animation-fill-mode: forwards;
-}
-body .the-container main .desserts .box-card-title {
-  animation-name: show-desserts;
-  animation-duration: 1s;
-  animation-delay: 8.3s;
-  animation-fill-mode: forwards;
-}
-body .the-container main .desserts .cards:nth-of-type(1) {
-  animation: show-desserts;
-  animation-delay: 9s;
-  animation-fill-mode: forwards;
-  animation-timing-function: ease-in-out;
-}
-body .the-container main .desserts .cards:nth-of-type(2) {
-  animation: show-desserts;
-  animation-delay: 10s;
-  animation-fill-mode: forwards;
-  animation-timing-function: ease-in-out;
-}
-body .the-container main .desserts .cards:nth-of-type(3) {
-  animation: show-desserts;
-  animation-delay: 11s;
+  opacity: 0;
   animation-fill-mode: forwards;
   animation-timing-function: ease-in-out;
 }
 @keyframes show-desserts {
   to {
-    visibility: visible;
-    animation-duration: 12s;
-    transition: ease-out;
+    opacity: 1;
   }
 }
 body .the-container .end {
