--- a/sass/pages.scss
+++ b/sass/pages.scss
@@ -67,6 +67,7 @@ body{
             align-items: center;
             padding-top: 20px;
             margin-bottom: 30px;
+            opacity: 1;
             .for-title {
               width: 270px;
               padding-left: 10px;
@@ -194,15 +195,14 @@ body{
             }
           }
           .entries {
-            .one{
-              visibility: visible;
+            .box-card-title,.cards{ 
+              @include animation-entries;
             }
-           @include animation-entries;
           }
-          .dishes{
+          .dishes {
            @include animation-dishes;
           }
-          .desserts  {
+          .desserts {
            @include animation-desserts
           }
     }
